# zephyr

./: west.yml
boards/raspberrypi/rpi_pico/: rpi_pico_rp2040_w.dts  rpi_pico_rp2040_w.yaml  rpi_pico_rp2040_w_defconfig
boards/raspberrypi/rpi_pico2/: Kconfig.defconfig  Kconfig.rpi_pico2  board.yml  rpi_pico2_rp2350a_m33_w.dts  rpi_pico2_rp2350a_m33_w.yaml  rpi_pico2_rp2350a_m33_w_defconfig
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.gpio_airoc  gpio_airoc.c  gpio_emul.c
drivers/wifi/infineon/: airoc_whd_hal_common.c  airoc_whd_hal_sdio.c  airoc_whd_hal_spi.c  airoc_wifi.c  airoc_wifi.h
dts/bindings/gpio/: airoc,gpio.yaml  infineon,airoc-gpio.yaml
include/zephyr/drivers/wifi/infineon/: airoc_wifi_if.h
modules/hal_rpi_pico/: CMakeLists.txt
samples/basic/minimal/: CMakeLists.txt
samples/basic/minimal/src/: main.c
samples/hello_world/: CMakeLists.txt
samples/hello_world/src/: main.c
samples/net/wifi/shell/: CMakeLists.txt  prj.conf
samples/net/wifi/shell/src/: wifi_test.c
